--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-player": "^0.14.1",
     "react-router": "^3.0.2"
   }
 }
