--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.5",
     "mailchimp-api-v3": "^1.7.0",
     "meteor-node-stubs": "~0.2.0",
+    "prerender-node": "^2.7.0",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
