--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "aws-cloudfront-sign": "^2.2.0",
     "babel-runtime": "6.18.0",
     "classnames": "^2.2.5",
     "mailchimp-api-v3": "^1.7.0",
