--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-player": "^0.14.1",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "react-textarea-autosize": "^4.0.5"
   }
 }
