--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-runtime": "6.18.0",
     "classnames": "^2.2.5",
     "mailchimp-api-v3": "^1.7.0",
+    "material-ui": "^0.17.1",
     "meteor-node-stubs": "~0.2.0",
     "prerender-node": "^2.7.0",
     "react": "^15.4.2",
@@ -16,6 +17,9 @@
     "react-dom": "^15.4.2",
     "react-player": "^0.14.1",
     "react-router": "^3.0.2",
-    "react-textarea-autosize": "^4.0.5"
+    "react-tap-event-plugin": "^2.0.1",
+    "react-textarea-autosize": "^4.0.5",
+    "simple-react-form": "^1.9.1",
+    "simple-react-form-material-ui": "^1.7.8"
   }
 }
